--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,16 +1,20 @@
 .product {
   display: flex;
   flex-direction: column;
-  max-height: 400px;
+  align-items: center;
+  justify-content: flex-start;
+  height: 400px;
   min-width: 100px;
   background-color: white;
   margin: 10px;
   z-index: 1;
+  padding: 20px;
+  width: 100%;
 }
 
 .product__info {
-  height: 100px;
-  margin-bottom: 15px;
+  min-height: 100px;
+  margin: 5px;
 }
 
 .product__price {
@@ -18,13 +22,15 @@
 }
 .product__rating {
   display: flex;
+  margin-top: -30px;
 }
 
 .product > img {
   width: 100%;
   height: 200px;
   object-fit: contain;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  background-color: orchid;
 }
 
 .product > button {
@@ -32,4 +38,5 @@
   border-radius: 1px solid;
   border-color: #a88734 #9c7e31 #846a29;
   border-radius: 2px;
+  margin-top: 10px;
 }
