--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,22 +3,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 400px;
-  min-width: 100px;
   background-color: white;
   margin: 10px;
-  z-index: 1;
   padding: 20px;
+  z-index: 1;
   width: 100%;
+  height: 400px;
 }
-
 .product__info {
-  min-height: 100px;
-  margin: 5px;
+  margin: 0 5px;
 }
 
 .product__price {
-  margin-top: 5px;
+  margin-top: -10px;
 }
 .product__rating {
   display: flex;
@@ -29,8 +26,8 @@
   width: 100%;
   height: 200px;
   object-fit: contain;
-  margin-bottom: 10px;
-  background-color: orchid;
+  z-index: 1;
+  margin-bottom: 5px;
 }
 
 .product > button {
@@ -39,4 +36,5 @@
   border-color: #a88734 #9c7e31 #846a29;
   border-radius: 2px;
   margin-top: 10px;
+  margin-bottom: -10px;
 }
