--- a/src/components/Checkout Page/Checkout.css
+++ b/src/components/Checkout Page/Checkout.css
@@ -1,4 +1,16 @@
+.checkout {
+  background-color: white;
+  min-height: 565px;
+  display: flex;
+  width: ;
+}
+
 .checkout__ad {
   width: 100%;
   margin-bottom: 10px;
+}
+
+.checkout__right {
+  padding-right: 10px;
+  margin-top: -20px;
 }
