--- a/src/components/subtotal/Subtotal.css
+++ b/src/components/subtotal/Subtotal.css
@@ -3,12 +3,30 @@
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
-  height: 100px;
+  height: 130px;
   padding: 10px;
   background-color: #f3f3f3;
   border-radius: 3px;
 }
 
+.subtotal__title {
+  font-size: 18px;
+}
 .subtotal__gift {
+  margin-top: -5px;
   display: flex;
+}
+
+.subtotal__gift > input {
+  margin-right: 5px;
+}
+
+.subtotal > button {
+  background-color: #f0c14b;
+  border-radius: 1px solid;
+  border-color: #a88734 #9c7e31 #846a29;
+  border-radius: 2px;
+  margin-top: 10px;
+  padding: 5px;
+  font-size: 15px;
 }
