--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -9,7 +9,7 @@
   z-index: 1;
   width: 100%;
   min-width: 100px;
-  min-height: 400px;
+  min-height: 200px;
 }
 .product__info {
   margin: 0 5px;
@@ -17,16 +17,15 @@
 }
 
 .product__price {
-  margin-top: -10px;
+  /* margin-top: -10px; */
 }
 .product__rating {
   display: flex;
-  margin-top: -30px;
 }
 
 .product > img {
   width: 100%;
-  height: 250px;
+  height: 180px;
   object-fit: contain;
   margin-bottom: 5px;
 }
@@ -37,5 +36,5 @@
   border-color: #a88734 #9c7e31 #846a29;
   border-radius: 2px;
   margin-top: 10px;
-  margin-bottom: -10px;
+  /* margin-bottom: -10px; */
 }
