--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,3 +14,26 @@
   z-index: 1;
   margin: 0 10px;
 }
+
+.signIn__block {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  /* background-color: green; */
+  margin: 10px;
+  /* border: 1px solid black; */
+  align-items: center;
+}
+
+.home__giftCard {
+  height: 210px;
+  width: 200px;
+  display: block;
+  object-fit: contain;
+  margin: 10px;
+  background-color: black;
+  width: 280px;
+  background-image: url("https://m.media-amazon.com/images/G/02/UK-hq/2020/img/Giftcard/XCM_Manual_1297631_1519586_UK_uk_holiday_house_ads_ukgc_gb_en_3609798_300x250_en_GB.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
