--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -39,7 +39,9 @@
 
 .home__bottomImage {
   background-color: white;
-  padding: 30px 60px;
-  width: 88%;
-  margin: 20px;
+  margin: 10px 20px 10px 20px;
+  width: 94%;
+  padding: 20px;
+  height: 300px;
+  object-fit: contain;
 }
