--- a/src/components/subtotal/Subtotal.css
+++ b/src/components/subtotal/Subtotal.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
-  height: 130px;
+  height: 100px;
   padding: 10px;
   background-color: #f3f3f3;
   border-radius: 3px;
@@ -13,12 +13,13 @@
   font-size: 18px;
 }
 .subtotal__gift {
-  margin-top: -5px;
   display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .subtotal__gift > input {
-  margin-right: 5px;
+  margin-right: 3px;
 }
 
 .subtotal > button {
@@ -26,7 +27,6 @@
   border-radius: 1px solid;
   border-color: #a88734 #9c7e31 #846a29;
   border-radius: 2px;
-  margin-top: 10px;
   padding: 5px;
   font-size: 15px;
 }
