--- a/src/components/subtotal/Subtotal.css
+++ b/src/components/subtotal/Subtotal.css
@@ -4,8 +4,9 @@
   justify-content: space-between;
   width: 300px;
   height: 100px;
-  padding: 10px;
+  padding: 20px;
   background-color: #f3f3f3;
+  border: 1px solid #dddddd;
   border-radius: 3px;
 }
 
@@ -14,8 +15,8 @@
 }
 .subtotal__gift {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
 }
 
 .subtotal__gift > input {
@@ -25,8 +26,9 @@
 .subtotal > button {
   background-color: #f0c14b;
   border-radius: 1px solid;
+  width: 100%;
+  height: 30px;
   border-color: #a88734 #9c7e31 #846a29;
-  border-radius: 2px;
   padding: 5px;
   font-size: 15px;
 }
