--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -21,7 +21,7 @@
 }
 
 .footer__Info {
-  height: 300px;
+  min-height: 350px;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -37,4 +37,31 @@
   margin-top: 20px;
   background-color: #131a22;
   height: 200px;
+}
+
+@media (max-width: 700px) {
+  .footer__socialInfo {
+    background-color: #232f3e;
+    min-height: 700px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer__bottom {
+    margin-top: 50px;
+    background-color: #131a22;
+    height: 200px;
+  }
+
+  .footer__Info {
+    min-height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+  .footer__bottom {
+    margin-top: 0px;
+    background-color: #131a22;
+    height: 200px;
+  }
 }
