--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,6 +15,22 @@
   margin: 0 10px;
 }
 
+@media (max-width: 700px) {
+  .home__img {
+    width: 100%;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    z-index: -1;
+    margin-bottom: -100px;
+  }
+  .home__row {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    margin: 0 10px;
+    align-items: center;
+  }
+}
+
 .signIn__block {
   display: flex;
   flex-direction: column;
