--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -11,6 +11,23 @@
   min-width: 100px;
   min-height: 300px;
 }
+
+@media (max-width: 700px) {
+  .product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    z-index: 1;
+    width: 80%;
+    /* min-width: 100px; */
+    min-height: 300px;
+  }
+}
+
 .product__info {
   margin: 0 5px;
   min-height: 100px;
