--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,7 +6,7 @@
   width: 100%;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   z-index: -1;
-  margin-bottom: -200px;
+  margin-bottom: -300px;
 }
 
 .home__row {
@@ -15,12 +15,14 @@
   margin: 0 10px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .home__img {
-    width: 100%;
+    /* width: 500px; */
+    height: 200px;
+    object-fit: cover;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     z-index: -1;
-    margin-bottom: -50px;
+    margin-bottom: -100px;
   }
   .home__row {
     display: flex;
