--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #131921;
+  background-color: #182c44;
   display: flex;
   align-items: center;
   position: sticky;
@@ -75,7 +75,6 @@
 }
 @media (max-width: 500px) {
   .header {
-    background-color: #131921;
     display: flex;
     flex-direction: row;
     align-items: center;
