--- a/src/components/Checkout Page/CheckoutProduct.css
+++ b/src/components/Checkout Page/CheckoutProduct.css
@@ -24,9 +24,9 @@
 }
 
 .CheckoutProduct__info > button {
-  background-color: #f0c14b;
+  background-color: black;
+  color: white;
   border-radius: 1px solid;
-  border-color: #a88734 #9c7e31 #846a29;
   border-radius: 2px;
   margin-top: 10px;
 }
