--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #182c44;
+  background-color: black;
   display: flex;
   align-items: center;
   position: sticky;
@@ -31,7 +31,7 @@
 }
 
 .header__searchIcon {
-  background-color: #cd9042;
+  background-color: white;
   padding: 5px;
   height: 22px !important;
 }
