--- a/src/components/subtotal/Subtotal.css
+++ b/src/components/subtotal/Subtotal.css
@@ -24,11 +24,11 @@
 }
 
 .subtotal > button {
-  background-color: #f0c14b;
+  background-color: black;
+  color: white;
   border-radius: 1px solid;
   width: 100%;
   height: 30px;
-  border-color: #a88734 #9c7e31 #846a29;
   padding: 5px;
   font-size: 15px;
 }
